# scivis-openvdb-blender

./: .gitignore  CMakeLists.txt  README.md  dependencyinstallapt.sh
Blender/: rendering.blend
Blender/voxels/: grid0.vdb
cpp/: CMakeLists.txt  main.cpp
python/: main.py
